--- a/index.html
+++ b/index.html
@@ -10,90 +10,28 @@
     <!-- Main Style -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body>
+<body id="landing">
 <div class="container">
-    <div class="options">
-        <div class="game-mode">
-            <div class="select-mode">
-                <div class="selectBox">
-                    <div class="select">Game Mode <span class="fa fa-angle-down"></span></div>
-                    <div class="overSelect"></div>
-                </div>
-                <div class="alternatives">
-                    <div class="wrapper">
-                        <div>1v1</div>
-                        <div>2v2</div>
-                        <div>3v3</div>
-                        <div>4v4</div>
-                    </div>
-                </div>
-            </div>
-        </div
-        ><div class="game-length">
-            <div class="select-length">
-                <div class="selectBox">
-                    <div class="select">Game Length <span class="fa fa-angle-down"></span></div>
-                    <div class="overSelect"></div>
-                </div>
-                <div class="alternatives">
-                    <div class="wrapper">
-                        <div>BO1</div>
-                        <div>BO3</div>
-                        <div>BO5</div>
-                    </div>
-                </div>
-            </div>
-        </div
-        ><div class="game-maps">
-            <div class="select-maps">
-                <div class="selectBox">
-                    <div class="select">Maps <span class="fa fa-angle-down"></span></div>
-                    <div class="overSelect"></div>
-                </div>
-                <div class="alternatives">
-                    <div class="wrapper">
-                        <div class="groups">Please select the game mode first.</div>
-                    </div>
-                </div>
-            </div>
-        </div
-        ><div class="game-veto">
-            <div class="select-veto">
-                <div class="selectBox">
-                    <div class="select">Veto Type <span class="fa fa-angle-down"></span></div>
-                    <div class="overSelect"></div>
-                </div>
-                <div class="alternatives">
-                    <div class="wrapper">
-                        <div class="groups">Please select the game length first.</div>
-                    </div>
-                </div>
-            </div>
-        </div
-        ><div class="veto-start">
-            <div>
-                <div class="select" id="startVeto">Start Veto</div>
-            </div>
+
+    <!-- Header -->
+
+    <header>
+
+        <img src="">
+
+        <div class="left">
+            <img src="">
         </div>
-    </div>
-    <div class="veto-window">
-        <div class="vetoes">
-            <div class="maps"></div
-            ><div class="maps"></div
-            ><div class="maps"></div
-            ><div class="maps"></div
-            ><div class="maps"></div
-            ><div class="maps"></div
-            ><div class="maps"></div
-            ><div class="maps"></div
-            ><div class="maps"></div
-            ><div class="maps"></div
-            ><div class="maps"></div
-            ><div class="maps"></div>
+
+        <div class="right">
+            <h1>WarCraft III Veto</h1>
+            <div class="desc"></div>
+            <button></button>
         </div>
-    </div>
+
+    </header>
 </div>
 
-<script src="../dist/2018-04-03%20Warcraft%203%20Map%20Veto/js/script.js"></script>
+<script src="dist/js/script.js"></script>
 </body>
 </html>
