landing page added

--- a/index.html
+++ b/index.html
@@ -17,19 +17,60 @@
 
     <header>
 
-        <img src="">
+        <img src="img/w3veto-logo.png">
 
         <div class="left">
-            <img src="">
-        </div>
-
-        <div class="right">
-            <h1>WarCraft III Veto</h1>
-            <div class="desc"></div>
-            <button></button>
+            <div class="preview"><img src="img/preview.png"></div>
+        </div
+        ><div class="right">
+            <h1>Your #1 choice for vetoing maps for competitive matches</h1>
+            <div class="desc">Quick, easy and smooth experience</div>
+        <a href="app.html"><button>VETO NOW</button></a>
         </div>
 
     </header>
+
+    <!-- Features -->
+
+    <section class="features">
+
+        <div class="item">
+            <div class="icon"><div class="fa fa-map-o"></div></div>
+            <h2>Latest Map Pool</h2>
+            <div class="desc">
+                Our product provides all the latest Battle.Net
+                ladder maps, including community maps like Last Refuge,
+                Amazonia and Ancient Isles. We also allow users to
+                contribute to the map pool by suggesting maps they like
+                to be added on our contact page or on our social media.
+            </div>
+        </div
+
+        ><div class="item">
+            <div class="icon"><div class="fa fa-cogs"></div></div>
+            <h2>Fully Customizable</h2>
+            <div class="desc">
+                You can edit your vetoes to suit your needs.
+                Everything from the game mode and game length to
+                custom map pools and veto systems is fully customizable.
+                Additional features are worked on all the time so the
+                possibilities for customzing are limitless.
+            </div>
+        </div
+
+        ><div class="item">
+            <div class="icon"><div class="fa fa-star"></div></div>
+            <h2>The one and only</h2>
+            <div class="desc">
+                As there is not really any other similar service in the
+                Warcraft 3 community, we take our job very seriously
+                to provide the best product possible, all for free. Feedback
+                and suggestions are not only welcomed but also encouraged,
+                as this is pretty much the only way we can improve our service.
+            </div>
+        </div>
+
+    </section>
 </div>
 
 <script src="dist/js/script.js"></script>
