navigation menu added

--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,14 @@
 <body id="contact">
 <div class="container">
 
+    <!-- Navigation -->
+
+    <nav>
+        <a href="index.html"><button>Home</button></a>
+        <a href="app.html"><button>Veto</button></a>
+        <a href="contact.html"><button>Contact</button></a>
+    </nav>
+    
 </div>
 <script src="dist/js/script.js"></script>
 </body>
