--- a/app.html
+++ b/app.html
@@ -12,6 +12,17 @@
 </head>
 <body id="app">
 <div class="container">
+
+    <!-- Navigation -->
+
+    <nav>
+        <a href="index.html"><button>Home</button></a>
+        <a href="app.html"><button>Veto</button></a>
+        <a href="contact.html"><button>Contact</button></a>
+    </nav>
+
+    <!-- Options -->
+
     <div class="options">
         <div class="game-mode">
             <div class="select-mode">
@@ -76,6 +87,9 @@
             </div>
         </div>
     </div>
+
+    <!-- Veto Window -->
+
     <div class="veto-window">
         <div class="vetoes">
         </div>
