--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
 <body id="landing">
 <div class="container">
 
+    <!-- Navigation -->
+
+    <nav>
+        <a href="index.html"><button>Home</button></a>
+        <a href="app.html"><button>Veto</button></a>
+        <a href="contact.html"><button>Contact</button></a>
+    </nav>
+
     <!-- Header -->
 
     <header>
