contact page aded

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,25 @@
         <a href="app.html"><button>Veto</button></a>
         <a href="contact.html"><button>Contact</button></a>
     </nav>
-    
+
+    <!-- Contact Form -->
+
+    <section class="contact">
+        <div class="title">Contact us</div>
+        <div class="desc">
+            Having any suggestions and/or feedback? Do not hesitate to
+            contact us below, we are always working on improving our product.
+        </div>
+        <form action="">
+            <label for="form_name"><input type="text" id="form_name" placeholder="Name"></label>
+            <label for="form_email"><input type="email" id="form_email" placeholder="Email"></label>
+            <label for="form_discord"><input type="text" id="form_discord" placeholder="Discord"></label>
+            <label for="form_twitter"><input type="text" id="form_twitter" placeholder="Twitter"></label>
+            <label for="form_message"><textarea id="form_message" placeholder="Input your message..."></textarea></label>
+            <input type="submit" id="form_submit">
+        </form>
+    </section>
+
 </div>
 <script src="dist/js/script.js"></script>
 </body>
