landing page is now responsive

--- a/contact.html
+++ b/contact.html
@@ -32,8 +32,8 @@
         <form action="">
             <label for="form_name"><input type="text" id="form_name" placeholder="Name"></label>
             <label for="form_email"><input type="email" id="form_email" placeholder="Email"></label>
-            <label for="form_discord"><input type="text" id="form_discord" placeholder="Discord"></label>
-            <label for="form_twitter"><input type="text" id="form_twitter" placeholder="Twitter"></label>
+            <label for="form_discord"><input type="text" id="form_discord" placeholder="Discord (Optional)"></label>
+            <label for="form_twitter"><input type="text" id="form_twitter" placeholder="Twitter (Optional)"></label>
             <label for="form_message"><textarea id="form_message" placeholder="Input your message..."></textarea></label>
             <input type="submit" id="form_submit">
         </form>
