--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta id="viewport" name="viewport" content ="width=device-width">
     <title>Warcraft 3 Map Veto</title>
     <!-- Normalize CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
@@ -30,6 +31,7 @@
         <div class="left">
             <div class="preview"><img src="img/preview.png"></div>
         </div
+
         ><div class="right">
             <h1>Your #1 choice for vetoing maps for competitive matches</h1>
             <div class="desc">Quick, easy and smooth experience</div>
