alt added to img elements

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 
     <header>
 
-        <img src="img/w3veto-logo.png">
+        <img src="img/w3veto-logo.png" alt="Website Logo">
 
         <div class="left">
-            <div class="preview"><img src="img/preview.png"></div>
+            <div class="preview"><img src="img/preview.png" alt="App Preview"></div>
         </div
 
         ><div class="right">
