html validation fixes

--- a/contact.html
+++ b/contact.html
@@ -17,9 +17,9 @@
     <!-- Navigation -->
 
     <nav>
-        <a href="index.html"><button>Home</button></a>
-        <a href="app.html"><button>Veto</button></a>
-        <a href="contact.html"><button>Contact</button></a>
+        <a href="index.html">Home</a>
+        <a href="app.html">Veto</a>
+        <a href="contact.html">Contact</a>
     </nav>
 
     <!-- Contact Form -->
@@ -30,7 +30,7 @@
             Having any suggestions and/or feedback? Do not hesitate to
             contact us below, we are always working on improving our product.
         </div>
-        <form action="">
+        <form action="contact.html">
             <label for="form_name"><input type="text" id="form_name" placeholder="Name"></label>
             <label for="form_email"><input type="email" id="form_email" placeholder="Email"></label>
             <label for="form_discord"><input type="text" id="form_discord" placeholder="Discord (Optional)"></label>
