--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <!-- Navigation -->
 
     <nav>
-        <a href="index.html"><button>Home</button></a>
-        <a href="app.html"><button>Veto</button></a>
-        <a href="contact.html"><button>Contact</button></a>
+        <a href="index.html">Home</a>
+        <a href="app.html">Veto</a>
+        <a href="contact.html">Contact</a>
     </nav>
 
     <!-- Header -->
@@ -35,7 +35,7 @@
         ><div class="right">
             <h1>Your #1 choice for vetoing maps for competitive matches</h1>
             <div class="desc">Quick, easy and smooth experience</div>
-        <a href="app.html"><button>VETO NOW</button></a>
+        <a href="app.html">VETO NOW</a>
         </div>
 
     </header>
