--- a/app.html
+++ b/app.html
@@ -17,9 +17,9 @@
     <!-- Navigation -->
 
     <nav>
-        <a href="index.html"><button>Home</button></a>
-        <a href="app.html"><button>Veto</button></a>
-        <a href="contact.html"><button>Contact</button></a>
+        <a href="index.html">Home</a>
+        <a href="app.html">Veto</a>
+        <a href="contact.html">Contact</a>
     </nav>
 
     <!-- Options -->
