additional fixed and tweaks (index & contact)

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         ><div class="right">
             <h1>Your #1 choice for vetoing maps for competitive matches</h1>
             <div class="desc">Quick, easy and smooth experience</div>
-        <a href="app.html">VETO NOW</a>
+            <button onclick="window.location='app.html'">VETO NOW</button>
         </div>
 
     </header>
