--- a/contact.html
+++ b/contact.html
@@ -31,11 +31,11 @@
             contact us below, we are always working on improving our product.
         </div>
         <form action="contact.html">
-            <label for="form_name" title="name"><input type="text" id="form_name" placeholder="Your Name..."></label>
-            <label for="form_email" title="email"><input type="email" id="form_email" placeholder="Your Email..."></label>
-            <label for="form_discord" title="discord"><input type="text" id="form_discord" placeholder="Your Discord... (Optional)"></label>
-            <label for="form_twitter" title="twitter"><input type="text" id="form_twitter" placeholder="Your Twitter... (Optional)"></label>
-            <label for="form_message" title="message"><textarea id="form_message" placeholder="Input your message..."></textarea></label>
+            <label for="form_name" title="name"><input type="text" id="form_name" placeholder="Name"></label>
+            <label for="form_email" title="email"><input type="email" id="form_email" placeholder="Email"></label>
+            <label for="form_discord" title="discord"><input type="text" id="form_discord" placeholder="Discord (Optional)"></label>
+            <label for="form_twitter" title="twitter"><input type="text" id="form_twitter" placeholder="Twitter(Optional)"></label>
+            <label for="form_message" title="message"><textarea id="form_message" placeholder="Message"></textarea></label>
             <input type="submit" id="form_submit" value="Submit">
         </form>
     </section>
